force-app/main/default/objects/Review__c/fields/Recommended_for_hire__c.field-meta.xml
<CustomField>
    <fullName>Recommended_for_hire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recommended for hire</label>
    <type>Checkbox</type>
</CustomField>