force-app/main/default/objects/Review__c/fields/Review_Score__c.field-meta.xml
<CustomField>
    <fullName>Review_Score__c</fullName>
    <formula>(VALUE(TEXT(Business_Skills__c)) + VALUE(TEXT( Cultura__c  )) +
VALUE(TEXT(Technical_Skills__c )) + IF( Recommended_for_hire__c ,5,1)) / 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Review Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>