force-app/main/default/objects/Review__c/validationRules/Force_Skills_before_Recommendation.validationRule-meta.xml
<ValidationRule>
    <fullName>Force_Skills_before_Recommendation</fullName>
    <active>true</active>
    <errorConditionFormula>Recommended_for_hire__c  &amp;&amp;
(ISBLANK(TEXT( Business_Skills__c )) ||
ISBLANK(TEXT( Cultura__c )) ||
ISBLANK(TEXT( Technical_Skills__c )))</errorConditionFormula>
    <errorMessage>You must select a score for Technical Skills,
Business Skills and Cultural Fit before you can Recommend for Hire</errorMessage>
</ValidationRule>